--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <title>Examples</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-    <script src="http://maps.api.2gis.ru/2.0/loader.js?pkg=full"></script>
-    <link rel="stylesheet" href="http://2gis.github.io/mapsapi/vendors/Leaflet.markerCluster/MarkerCluster.Default.css" />
-    <script src="http://maps.api.2gis.ru/2.0/heat_realworld.js"></script>
-    <script src="http://maps.api.2gis.ru/2.0/cluster_realworld.js"></script>
+    <script src="https://maps.api.2gis.ru/2.0/loader.js?pkg=full"></script>
+    <link rel="stylesheet" href="https://2gis.github.io/mapsapi/vendors/Leaflet.markerCluster/MarkerCluster.Default.css" />
+    <script src="https://maps.api.2gis.ru/2.0/heat_realworld.js"></script>
+    <script src="https://maps.api.2gis.ru/2.0/cluster_realworld.js"></script>
 </head>
 <body style="margin-top: 130px">
 <div class="container">
