add Route and gradient line

--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
             <a class="navbar-brand" href="#case-3">Пробки</a>
             <a class="navbar-brand" href="#case-4">Popup's</a>
             <a class="navbar-brand" href="#case-5">Геометрии</a>
-            <a class="navbar-brand" href="#case-6">Кластеризация маркеров</a>
-            <a class="navbar-brand" href="#case-7">Тепловая карта</a>
+            <a class="navbar-brand" href="#case-6">Маршруты</a>
+            <a class="navbar-brand" href="#case-7">Кластеризация маркеров</a>
+            <a class="navbar-brand" href="#case-8">Тепловая карта</a>
+            <a class="navbar-brand" href="#case-9">Градиентные линии</a>
         </div>
     </nav>
     <div class="panel panel-primary" id="case-1">
@@ -66,17 +68,32 @@
         </div>
     </div>
     <div class="panel panel-primary" id="case-6">
-        <div class="panel-heading">Кластеризаия маркеров</div>
+        <div class="panel-heading">Маршруты</div>
         <div class="panel-body">
-            <p>Является дополнительным модулем</p>
-            <div id="map-6" style="width: auto; height: 350px;"></div>
+            <p>Анимированная линия маршрута</p>
+            <div id="map-6" style="width: auto; height: 350px; margin-bottom: 20px;"></div>
+            <button type="button" class="btn btn-primary">Показать маршрут</button>
         </div>
     </div>
     <div class="panel panel-primary" id="case-7">
-        <div class="panel-heading">Тепловая карта</div>
+        <div class="panel-heading">Кластеризаия маркеров</div>
         <div class="panel-body">
             <p>Является дополнительным модулем</p>
             <div id="map-7" style="width: auto; height: 350px;"></div>
+        </div>
+    </div>
+    <div class="panel panel-primary" id="case-8">
+        <div class="panel-heading">Тепловая карта</div>
+        <div class="panel-body">
+            <p>Является дополнительным модулем</p>
+            <div id="map-8" style="width: auto; height: 350px;"></div>
+        </div>
+    </div>
+    <div class="panel panel-primary" id="case-9">
+        <div class="panel-heading">Градиентные линии</div>
+        <div class="panel-body">
+            <p>Является дополнительным модулем</p>
+            <div id="map-9" style="width: auto; height: 350px;"></div>
         </div>
     </div>
     <script src="index.js"></script>
