--- a/index.html
+++ b/index.html
@@ -9,21 +9,33 @@
     <link rel="stylesheet" href="https://2gis.github.io/mapsapi/vendors/Leaflet.markerCluster/MarkerCluster.Default.css" />
     <script src="https://maps.api.2gis.ru/2.0/heat_realworld.js"></script>
     <script src="https://maps.api.2gis.ru/2.0/cluster_realworld.js"></script>
+    <style>
+        .panel, .panel-heading, .btn {
+            border-radius: 0;
+        }
+        .panel {
+            box-shadow: 3px 3px 0 rgba(0, 0, 0, 0.3);
+        }
+        .btn {
+            border: none;
+            background: #337ab7;
+            box-shadow: 2px 2px 0 rgba(0, 0, 0, 0.4);
+        }
+    </style>
 </head>
-<body style="margin-top: 130px">
+<body style="margin-top: 100px">
 <div class="container">
-    <nav class="navbar panel-primary navbar-fixed-top">
-        <div class="container" style="margin: 0 auto; background: #ffffff">
-            <a class="navbar-brand" href="#case-1">Маркеры</a>
-            <a class="navbar-brand" href="#case-2">Входы</a>
-            <a class="navbar-brand" href="#case-3">Пробки</a>
-            <a class="navbar-brand" href="#case-4">Popup's</a>
-            <a class="navbar-brand" href="#case-5">Геометрии</a>
-            <a class="navbar-brand" href="#case-6">Маршруты</a>
-            <a class="navbar-brand" href="#case-7">Кластеризация маркеров</a>
-            <a class="navbar-brand" href="#case-8">Тепловая карта</a>
-            <a class="navbar-brand" href="#case-9">Градиентные линии</a>
-        </div>
+    <nav class="navbar panel-primary navbar-fixed-top" style="background: #ffffff">
+        <a class="navbar-brand" href="#case-1">Маркеры</a>
+        <a class="navbar-brand" href="#case-2">Входы</a>
+        <a class="navbar-brand" href="#case-3">Пробки</a>
+        <a class="navbar-brand" href="#case-4">Popup's</a>
+        <a class="navbar-brand" href="#case-5">Геометрии</a>
+        <a class="navbar-brand" href="#case-6">Маршруты</a>
+        <a class="navbar-brand" href="#case-7">Геолокация</a>
+        <a class="navbar-brand" href="#case-8">Кластеризация маркеров</a>
+        <a class="navbar-brand" href="#case-9">Тепловая карта</a>
+        <a class="navbar-brand" href="#case-10">Градиентные линии</a>
     </nav>
     <div class="panel panel-primary" id="case-1">
         <div class="panel-heading">Маркеры</div>
@@ -76,24 +88,32 @@
         </div>
     </div>
     <div class="panel panel-primary" id="case-7">
-        <div class="panel-heading">Кластеризаия маркеров</div>
+        <div class="panel-heading">Геолокация</div>
         <div class="panel-body">
-            <p>Является дополнительным модулем</p>
-            <div id="map-7" style="width: auto; height: 350px;"></div>
+            <p>Возможность найти Вас на карте</p>
+            <div id="map-7" style="width: auto; height: 350px; margin-bottom: 20px;"></div>
+            <button type="button" class="btn btn-primary">Найти меня</button>
         </div>
     </div>
     <div class="panel panel-primary" id="case-8">
-        <div class="panel-heading">Тепловая карта</div>
+        <div class="panel-heading">Кластеризаия маркеров</div>
         <div class="panel-body">
             <p>Является дополнительным модулем</p>
             <div id="map-8" style="width: auto; height: 350px;"></div>
         </div>
     </div>
     <div class="panel panel-primary" id="case-9">
-        <div class="panel-heading">Градиентные линии</div>
+        <div class="panel-heading">Тепловая карта</div>
         <div class="panel-body">
             <p>Является дополнительным модулем</p>
             <div id="map-9" style="width: auto; height: 350px;"></div>
+        </div>
+    </div>
+    <div class="panel panel-primary" id="case-10">
+        <div class="panel-heading">Градиентные линии</div>
+        <div class="panel-body">
+            <p>Является дополнительным модулем</p>
+            <div id="map-10" style="width: auto; height: 350px;"></div>
         </div>
     </div>
     <script src="index.js"></script>
