--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="panel panel-primary">
             <div class="panel-heading">Маркеры</div>
             <div class="panel-body">
-                <p>Возможность моказать маркеры. Кликнете по карте, для добавления новых маркеров.</p>
+                <p>Возможность показать маркеры. Кликнете по карте, для добавления новых маркеров.</p>
                 <div id="map-1" style="width: auto; height: 350px;"></div>
             </div>
         </div>
@@ -51,7 +51,7 @@
         <div class="panel panel-primary">
             <div class="panel-heading">Входы</div>
             <div class="panel-body">
-                <p>Возможность моказать входы. Нажмите на кнопку, что бы показать входы.</p>
+                <p>Возможность показать входы. Нажмите на кнопку, что бы показать входы.</p>
                 <div id="map-2" style="width: auto; height: 350px; margin-bottom: 20px;"></div>
                 <button type="button" class="btn btn-primary">Показать входы</button>
             </div>
